--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Google Drive Notebeook Example</title>
+    <title>Google Drive Notebook Example</title>
 
     <script src="https://apis.google.com/js/api.js"></script>
   </head>
